@@ -37,7 +37,7 @@ class padthv1_sched
 public:
 
 	// plausible sched types.
-	enum Type { Sample, Programs, Controls, Controller, MidiIn };
+	enum Type { Sample, Programs, Controls, Controller, MidiIn, Tuning };
 
 	// ctor.
 	padthv1_sched(padthv1 *pSynth, Type stype, uint32_t nsize = 8);
